--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/zameschua/gamify-tembusu-telegram-bot#readme",
   "dependencies": {
     "dotenv": "^5.0.1",
-    "node-telegram-bot-api": "^0.30.0"
+    "jimp": "^0.2.28",
+    "node-telegram-bot-api": "^0.30.0",
+    "qrcode-reader": "^1.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
